Added License Path parameter and updated installer links.

--- a/src/main/resources/io/jenkins/plugins/ProvarAutomation/help-buildFile.html
+++ b/src/main/resources/io/jenkins/plugins/ProvarAutomation/help-buildFile.html
@@ -1,4 +1,4 @@
 <div>
-    The name of the build file. Must end with '.xml'.
+    The name of the build file. Can end with '.xml' or just be the base file name.
     This task assumes it is contained in the <code>ANT</code> folder of your <code>Project Name</code> directory.
 </div>
